# gpu-programming

./: .gitignore  CMakeLists.txt  README.md
include/: broadcasting.cuh  matrix_mult.cuh  vector_add.cuh
matrix-operations/: .gitignore  CMakeLists.txt  README.md
matrix-operations/.cache/clangd/index/: main.cpp.2C28C6851B068133.idx  vector_add.cu.AFC66EAED52F5E8A.idx  vector_add.cuh.54515D596ED07B0F.idx
matrix-operations/include/: vector_add.cuh
matrix-operations/src/: broadcasting.cu  main.cpp  matrix_mult.cu  vector_add.cu
src/common/: CMakeLists.txt  vector_add.cu
src/matrix-operations/: CMakeLists.txt  main.cpp
src/mnist/: CMakeLists.txt  main.cpp
